--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hash-maker",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A collection of hash and number generators for Node or Browser",
   "module": "lib/esm/index.mjs",
   "main": "lib/cjs/index.js",
@@ -19,7 +19,7 @@
     "./*": "./*"
   },
   "scripts": {
-    "clean": "rmdir /s lib",
+    "clean": "rmdir /S /Q lib",
     "build": "npm run clean && npm run build:esm && npm run move && npm run build:cjs",
     "build:esm": "tsc --module esnext --outDir lib/esm",
     "move": "cd ./lib/esm/ && ren index.js index.mjs && cd ../../",
