--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hash-maker",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A collection of hash and number generators for Node or Browser",
   "module": "lib/esm/index.mjs",
   "main": "lib/cjs/index.js",
@@ -21,9 +21,9 @@
   "scripts": {
     "clean": "rmdir /S /Q lib",
     "build": "npm run clean && npm run build:esm && npm run move && npm run build:cjs",
-    "build:esm": "tsc --module esnext --outDir lib/esm",
+    "build:esm": "tsc --moduleResolution NodeNext --module NodeNext --outDir lib/esm",
     "move": "cd ./lib/esm/ && ren index.js index.mjs && cd ../../",
-    "build:cjs": "tsc --module commonjs --outDir lib/cjs",
+    "build:cjs": "tsc --moduleResolution node --module commonjs --outDir lib/cjs",
     "prepack": ""
   },
   "keywords": [
