--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,16 @@
 {
     "compilerOptions": {
-      "target": "es2020",
+      "target": "es6",
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true,
       "strict": true,
       "noImplicitReturns": true,
-      "moduleResolution": "node",
       "allowSyntheticDefaultImports":true,
       "noFallthroughCasesInSwitch": true,
       "types": ["node", "mocha"],
       "esModuleInterop": true
     },
-    "files": [
-      "src/index.ts"
-    ]
+    "include": ["src/**/*.ts"],
+    "exclude": ["node_modules"]
   }
