--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "target": "es6",
+      "allowJs": true,
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true,
@@ -8,9 +9,11 @@
       "noImplicitReturns": true,
       "allowSyntheticDefaultImports":true,
       "noFallthroughCasesInSwitch": true,
-      "types": ["node", "mocha"],
+      "types": ["node"],
       "esModuleInterop": true
     },
-    "include": ["src/**/*.ts"],
+    "include": [
+      "src/*"
+    ],
     "exclude": ["node_modules"]
   }
