--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "hash-maker",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A collection of hash and number generators for Node or Browser",
   "module": "lib/esm/indexm.mjs",
-  "main": "lib/cjs/index.js",
+  "main": "lib/cjs/index.cjs",
+  "type": "module",
   "files": [
     "lib"
   ],
@@ -14,7 +15,7 @@
   "exports": {
     ".": {
       "import": "./lib/esm/indexm.mjs",
-      "require": "./lib/cjs/index.js"
+      "require": "./lib/cjs/index.cjs"
     },
     "./*": "./*"
   },
