--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hash-maker",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A collection of hash and number generators for Node or Browser",
   "module": "lib/esm/indexm.mjs",
   "main": "lib/cjs/index.cjs",
@@ -21,9 +21,10 @@
   },
   "scripts": {
     "clean": "rmdir /S /Q lib",
-    "build": "npm run clean && npm run build:esm && npm run move && npm run build:cjs",
+    "build": "npm run clean && npm run build:esm && npm run movem && npm run build:cjs && npm run movec",
     "build:esm": "tsc --moduleResolution NodeNext --module NodeNext --outDir lib/esm",
-    "move": "cd ./lib/esm/ && ren *.js *.mjs && cd ../../",
+    "movem": "cd ./lib/esm/ && ren *.js *.mjs && cd ../../",
+    "movec": "cd ./lib/cjs/ && ren *.js *.cjs && cd ../../",
     "build:cjs": "tsc --moduleResolution node --module commonjs --outDir lib/cjs",
     "prepack": ""
   },
