--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
   "scripts": {
     "clean": "rmdir /S /Q lib",
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build_replace": "npm run clean && npm run build:esm && npm run build:cjs && npm run movem && npm run movec",
     "build:esm": "tsc --moduleResolution NodeNext --module NodeNext --outDir lib/esm",
     "build:cjs": "tsc --moduleResolution node --module commonjs --outDir lib/cjs",
-    "movem": "mjs.bat",
-    "movec": "cjs.bat",
-    "postinstall": "node message.js"
+    "postinstall": "node -e console.log('hash-maker ^v2.0 has breaking changes from 1.0 with the additional hashes. Please review the new API structure and arguments before upgrading')"
   },
   "keywords": [
     "checksum",
@@ -104,6 +101,7 @@
     "Highway",
     "LSH",
     "MurMur",
+    "Argon2",
 
     "MersenneTwister",
     "RandomXorShift",
